fixing Eth balance alignment in the UI
Without this patch, When the screen is a little shrank, the Eth balance  misaligned in the top right corner

This is a problem because it breaks the UI.

This patch solves the problem by aligning the Eth balance in the top right corner, using the InputAdornment from material-ui library.

Issue-URL: https://app.clickup.com/t/2ky8z6m

  [x] The message explains WHY the change is needed.
  [x] The message explains HOW the change solves the problem.
  [x] The commit does not combine unrelated changes.
  [x] The commit does not introduce any breakage.
  [x] The commit does not introduce any new technical debt.
  [ ] The commit updates any related documentation.
  [ ] The commit includes automated testing.
  [ ] The commit has been thoroughly tested.

--- a/dapp/src/components/Header/styles.scss
+++ b/dapp/src/components/Header/styles.scss
@@ -133,6 +133,9 @@
             min-width: 115px;
             background: rgba(120, 154, 205, 0.2);
             border-radius: 8px;
+            .currency-symbol {
+                color: $muted-text;
+            }
         }
     }
 
