--- a/dapp/src/variables.scss
+++ b/dapp/src/variables.scss
@@ -7,6 +7,7 @@ $main-brown: #ffdfbd;
 $grey-btn: #475267;
 $grey-btn-border: #485267;
 $dark-gray: #404a53;
+$muted-text: gray;
 $modal-back: #151c2a;
 $switch-back: #111420;
 $button-group-item: linear-gradient(0deg, #727b93, #727b93);
